Services in mobile too much to the left fixed.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,16 +8,17 @@ html {
 }
 .container {
   max-width: 960px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 1024px), (max-width: 470px) {
   .container {
     max-width: 100%;
-    margin: auto;
+
 
   }
 }
+
 
 /* Header / Banner Section */
 .main-banner {
@@ -155,13 +156,14 @@ ul li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /*justify-content: center;*/
     margin-top: 3.77rem;
 
   }
   .service {
     margin-top: 1.54rem;
     font-size: 0.77rem;
+    margin-right: 0;
   }
 }
 
@@ -211,7 +213,7 @@ ul li {
 
 
 /* Footer */
-footer.container {
+footer {
   margin-top: 5rem;
   background-color: azure;
   display: flex;
